# USBProxy-legacy

./: .cproject  .gitignore  .project  .travis.yml  AUTHORS  DefinitionErrors.h  FDInfo.h  GadgetFS_helpers.c  GadgetFS_helpers.h  HexString.h  LibUSBDeviceProxy.cpp  LibUSBDeviceProxy.h  Logging.h  Makefile  Makefile.bak  Packets.h  README.md  TRACE.h  USBConfiguration.cpp  USBConfiguration.h  USBDevice.cpp  USBDevice.h  USBDeviceProxy.h  USBDeviceProxyNull.h  USBDeviceProxy_LibUSB.cpp  USBDeviceProxy_LibUSB.h  USBDeviceQualifier.cpp  USBDeviceQualifier.h  USBEndpoint.cpp  USBEndpoint.h  USBHID.cpp  USBHID.h  USBHostProxy.h  USBHostProxyNull.h  USBHostProxy_GadgetFS.cpp  USBHostProxy_GadgetFS.h  USBInjector.cpp  USBInjector.h  USBInjector_UDP.cpp  USBInjector_UDP.h  (+31 more)
doc/: README.md  gadgetfs_kernel_above_3.15.patch  inode.c.patch  usbproxy-9999.ebuild
lib/: Configuration.cpp  Configuration.h  Criteria.cpp  Criteria.h  DefinitionErrors.h  Device.cpp  Device.h  DeviceProxy.h  DeviceProxyNull.h  DeviceProxy_LibUSB.cpp  DeviceProxy_LibUSB.h  DeviceProxy_Loopback.cpp  DeviceProxy_Loopback.h  DeviceProxy_TCP.cpp  DeviceProxy_TCP.h  DeviceQualifier.cpp  DeviceQualifier.h  EP_IO.h  Endpoint.cpp  Endpoint.h  FDInfo.h  GadgetFS_helpers.c  GadgetFS_helpers.h  HID.cpp  HID.h  HaltSignal.c  HaltSignal.h  HexString.cpp  HexString.h  HostProxy.h  HostProxy_GadgetFS.cpp  HostProxy_GadgetFS.h  HostProxy_TCP.cpp  HostProxy_TCP.h  Injector.cpp  Injector.h  Injector_UDP.cpp  Injector_UDP.h  Interface.cpp  Interface.h  (+34 more)
sample/: README.samples  capture.pcap
src/: CMakeLists.txt  Makefile  USBProxy.conf  common.mk
src/Bindings/: Makefile  PacketFilter_Python.cpp  README.md  USBProxy.py  example_filter.py
src/Devices/: DeviceProxy_TCP.cpp  Makefile
src/Filters/: Makefile  PacketFilter.cpp  PacketFilter_Callback.cpp  PacketFilter_Callback.h  PacketFilter_KeyLogger.cpp  PacketFilter_MassStorage.cpp  PacketFilter_MassStorage.h  PacketFilter_PcapLogger.cpp  PacketFilter_Power.cpp  PacketFilter_ROT13.cpp  PacketFilter_StreamLog.cpp  PacketFilter_Test.cpp  PacketFilter_Test.h  PacketFilter_UDPHID.cpp
src/Hosts/: GadgetFS_helpers.c  GadgetFS_helpers.h  HostProxy_GadgetFS.cpp  HostProxy_GadgetFS.h  HostProxy_TCP.cpp
src/Injectors/: Injector_Queue.cpp  Injector_Queue.h  Injector_UDP.h  Injector_UDPHID.cpp
src/Plugins/: CMakeLists.txt  Makefile
src/Plugins/Devices/: #DeviceProxy_LibUSB.cpp#  CMakeLists.txt  DeviceProxy_Callback.cpp  DeviceProxy_Callback.h  DeviceProxy_LibUSB.cpp  DeviceProxy_LibUSB.h  DeviceProxy_Loopback.cpp  DeviceProxy_Loopback.h  DeviceProxy_Null.h  DeviceProxy_TCP.cpp  DeviceProxy_TCP.h  DeviceProxy_Xbox.cpp  DeviceProxy_Xbox.h  DeviceProxy_dot11.cpp  DeviceProxy_dot11.h  Dot11_Interface.h  Makefile
src/Plugins/Filters/: CMakeLists.txt  PacketFilter_Callback.cpp  PacketFilter_Callback.h  PacketFilter_KeyLogger.cpp  PacketFilter_KeyLogger.h  PacketFilter_MassStorage.cpp  PacketFilter_MassStorage.h  PacketFilter_NeoGeo.cpp  PacketFilter_NeoGeo.h  PacketFilter_PSClassic.cpp  PacketFilter_PSClassic.h  PacketFilter_PcapLogger.cpp  PacketFilter_PcapLogger.h  PacketFilter_Power.cpp  PacketFilter_Power.h  PacketFilter_ROT13.cpp  PacketFilter_ROT13.h  PacketFilter_StreamLog.cpp  PacketFilter_StreamLog.h  PacketFilter_Switch.cpp  PacketFilter_Switch.h  PacketFilter_UDPHID.cpp  PacketFilter_UDPHID.h  PacketFilter_Xbox.cpp  PacketFilter_Xbox.h  PacketFilter_Xbox360.cpp  PacketFilter_Xbox360.h  RustPlugin.rs
src/Plugins/Hosts/: CMakeLists.txt  GadgetFS_helpers.c  GadgetFS_helpers.h  HostProxy_GadgetFS.cpp  HostProxy_GadgetFS.h  HostProxy_Null.h  HostProxy_TCP.cpp  HostProxy_TCP.h  HostProxy_Xbox.cpp  HostProxy_Xbox.h
src/Plugins/Injectors/: CMakeLists.txt  Injector.cpp  Injector_UDP.cpp  Injector_UDP.h  Injector_UDPHID.cpp  Injector_UDPHID.h
src/Proxies/: DeviceProxy_Loopback.cpp  DeviceProxy_TCP.h  GadgetFS_helpers.c  HostProxyNull.h  TCP_Helper.cpp  TCP_Helper.h
src/bindings/: API.cpp  API.h  CMakeLists.txt  usb-mitm.py  usbproxy.i  usbproxy.py
src/bindings/ctypes/: API.cpp  API.h  CMakeLists.txt  USBDevice.py  deviceproxy.py  filters.py  kbd.py  keymap.py  ubertooth.py  usb-mitm.py  usbproxy.py
src/bindings/python/: API.cpp  CMakeLists.txt  USBDevice.py  USBEndpoint.py  USBInterface.py  USBKeyboard.py  USBMassStorage.py  USBProxyApp.py  deviceproxy.py  filters.py  keymap.py  ubertooth.py  usbproxy-fd-keyboard.py  usbproxy-fd-umass.py  usbproxy.py
src/bindings/swig/: CMakeLists.txt  usb-mitm.py
src/cmake/modules/: FindUSBProxy.cmake  Findlorcon.cmake
src/debian/: changelog  control  copyright  header-check.c  rules
src/include/: ConfigParser.h  Criteria.h  DefinitionErrors.h  DeviceProxy.h  Injector.h  Interface.h  PacketFilter.h  PacketFilter_Python.h  plugins.h
src/lib/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Configuration.cpp  Configuration.h  Criteria.cpp  Criteria.h  DefinitionErrors.h  Device.cpp  Device.h  DeviceProxy.h  DeviceQualifier.cpp  DeviceQualifier.h  EP_IO.h  Endpoint.cpp  Endpoint.h  FDInfo.c  FDInfo.h  HID.cpp  HID.h  HaltSignal.c  HaltSignal.h  HexString.cpp  HexString.h  HostProxy.h  Injector.cpp  Injector.h  Interface.cpp  Interface.h  InterfaceGroup.cpp  InterfaceGroup.h  Makefile  Manager.cpp  Manager.h  Packet.h  PacketFilter.cpp  PacketFilter.h  PluginManager.cpp  PluginManager.h  Plugins.h  (+19 more)
src/tools/: CMakeLists.txt  Makefile  UDP_injector.c  git-version-gen.sh  usb-mitm.cpp
src/tools/additional/: 55-USBProxy-dot11.rules  Makefile  README.md  UDP_injector.c  dot11_control.c  dot11_control.h  dot11_test.c
test/relaytest/: Makefile  relaytest.cpp
